--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run SwiftLint
         working-directory: NotchUtility
         run: |
-          swiftlint lint --config .swiftlint.yml --reporter github-actions-logging
+          swiftlint lint --reporter github-actions-logging
 
   # test:
   #   name: Build and Test
