--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,42 +38,42 @@ jobs:
         run: |
           swiftlint lint --reporter github-actions-logging
 
-  # test:
-  #   name: Build and Test
-  #   runs-on: macos-14
-  #   needs: lint
-  #   strategy:
-  #     matrix:
-  #       destination: ['platform=macOS,arch=x86_64', 'platform=macOS,arch=arm64']
+  test:
+    name: Build and Test
+    runs-on: macos-14
+    needs: lint
+    strategy:
+      matrix:
+        destination: ['platform=macOS,arch=x86_64', 'platform=macOS,arch=arm64']
     
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
         
-  #     - name: Setup Xcode
-  #       uses: maxim-lobanov/setup-xcode@v1
-  #       with:
-  #         xcode-version: '15.2'
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '15.2'
           
-  #     - name: Cache derived data
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: ~/Library/Developer/Xcode/DerivedData
-  #         key: ${{ runner.os }}-derived-data-${{ hashFiles('**/*.xcodeproj') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-derived-data-
+      - name: Cache derived data
+        uses: actions/cache@v4
+        with:
+          path: ~/Library/Developer/Xcode/DerivedData
+          key: ${{ runner.os }}-derived-data-${{ hashFiles('**/*.xcodeproj') }}
+          restore-keys: |
+            ${{ runner.os }}-derived-data-
             
-  #     - name: Build for testing
-  #       working-directory: NotchUtility
-  #       run: |
-  #         xcodebuild clean build-for-testing \
-  #           -project NotchUtility.xcodeproj \
-  #           -scheme NotchUtility \
-  #           -destination '${{ matrix.destination }}' \
-  #           CODE_SIGN_IDENTITY="" \
-  #           CODE_SIGNING_REQUIRED=NO \
-  #           ONLY_ACTIVE_ARCH=NO \
-  #           SWIFT_TREAT_WARNINGS_AS_ERRORS=YES
+      - name: Build for testing
+        working-directory: NotchUtility
+        run: |
+          xcodebuild clean build-for-testing \
+            -project NotchUtility.xcodeproj \
+            -scheme NotchUtility \
+            -destination '${{ matrix.destination }}' \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            ONLY_ACTIVE_ARCH=NO \
+            SWIFT_TREAT_WARNINGS_AS_ERRORS=YES
             
   #     - name: Run tests
   #       working-directory: NotchUtility
