--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         
+      - name: Debug directory structure
+        run: |
+          pwd
+          ls -la
+          find . -name "*.xcodeproj" -type d
+          
       - name: Install SwiftLint
         run: |
           brew install swiftlint
@@ -48,6 +54,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        
+      - name: Debug directory structure
+        run: |
+          pwd
+          ls -la
+          find . -name "*.xcodeproj" -type d
         
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
