--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,19 +54,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
-      - name: Debug directory structure
-        run: |
-          pwd
-          ls -la
-          find . -name "*.xcodeproj" -type d
-        
             
       - name: Build for testing
         run: |
           ls -la
           find . -name "*.xcodeproj" -type d
-          xcodebuild clean build \
+          xcodebuild clean build-for-testing \
             -project NotchUtility.xcodeproj \
             -scheme NotchUtility \
             -destination '${{ matrix.destination }}' \
