Update CI workflow to build without testing phase

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
             
       - name: Build for testing
         run: |
-          xcodebuild clean build-for-testing \
+          xcodebuild clean build \
             -project NotchUtility.xcodeproj \
             -scheme NotchUtility \
             -destination '${{ matrix.destination }}' \
