--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ on:
       - '.swiftlint.yml'
 
 env:
-  DEVELOPER_DIR: /Applications/Xcode_15.2.app/Contents/Developer
+  DEVELOPER_DIR: /Applications/Xcode_16.2.app/Contents/Developer
 
 jobs:
   lint:
@@ -28,55 +28,39 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+          
       - name: Install SwiftLint
         run: |
           brew install swiftlint
           
       - name: Run SwiftLint
-        working-directory: NotchUtility
         run: |
           swiftlint lint --reporter github-actions-logging
 
-  # test:
-  #   name: Build and Test
-  #   runs-on: macos-14
-  #   needs: lint
-  #   strategy:
-  #     matrix:
-  #       destination: ['platform=macOS,arch=x86_64', 'platform=macOS,arch=arm64']
+  test:
+    name: Build and Test
+    runs-on: macos-14
+    needs: lint
+    strategy:
+      matrix:
+        destination: ['platform=macOS,arch=x86_64', 'platform=macOS,arch=arm64']
     
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-        
-  #     - name: Setup Xcode
-  #       uses: maxim-lobanov/setup-xcode@v1
-  #       with:
-  #         xcode-version: '15.2'
-          
-  #     - name: Cache derived data
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: ~/Library/Developer/Xcode/DerivedData
-  #         key: ${{ runner.os }}-derived-data-${{ hashFiles('**/*.xcodeproj') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-derived-data-
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
             
-  #     - name: Build for testing
-  #       working-directory: NotchUtility
-  #       run: |
-  #         xcodebuild clean build-for-testing \
-  #           -project NotchUtility.xcodeproj \
-  #           -scheme NotchUtility \
-  #           -destination '${{ matrix.destination }}' \
-  #           CODE_SIGN_IDENTITY="" \
-  #           CODE_SIGNING_REQUIRED=NO \
-  #           ONLY_ACTIVE_ARCH=NO \
-  #           SWIFT_TREAT_WARNINGS_AS_ERRORS=YES
+      - name: Build for testing
+        run: |
+          xcodebuild clean build \
+            -project NotchUtility.xcodeproj \
+            -scheme NotchUtility \
+            -destination '${{ matrix.destination }}' \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            ONLY_ACTIVE_ARCH=NO \
+            SWIFT_TREAT_WARNINGS_AS_ERRORS=YES
             
   #     - name: Run tests
-  #       working-directory: NotchUtility
   #       run: |
   #         xcodebuild test-without-building \
   #           -project NotchUtility.xcodeproj \
@@ -90,7 +74,7 @@ jobs:
         
   #     - name: Upload test results
   #       if: failure()
-  #       uses: actions/upload-artifact@v4
+  #       uses: actions/upload-artifact@v4.6.2
   #       with:
   #         name: test-results-${{ matrix.destination }}
   #         path: |
@@ -99,21 +83,20 @@ jobs:
 
   # coverage:
   #   name: Code Coverage
-  #   runs-on: macos-14
+  #   runs-on: macos-15
   #   needs: test
   #   if: github.event_name == 'pull_request'
     
   #   steps:
   #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  #       uses: actions/checkout@v4.2.2
         
   #     - name: Setup Xcode
-  #       uses: maxim-lobanov/setup-xcode@v1
+  #       uses: maxim-lobanov/setup-xcode@v2
   #       with:
-  #         xcode-version: '15.2'
+  #         xcode-version: '16.2'
           
   #     - name: Run tests with coverage
-  #       working-directory: NotchUtility
   #       run: |
   #         xcodebuild test \
   #           -project NotchUtility.xcodeproj \
@@ -126,12 +109,11 @@ jobs:
   #           -resultBundlePath TestResults-Coverage.xcresult
             
   #     - name: Generate coverage report
-  #       working-directory: NotchUtility
   #       run: |
   #         xcrun xccov view --report --json TestResults-Coverage.xcresult > coverage.json
           
   #     - name: Upload coverage reports
-  #       uses: actions/upload-artifact@v4
+  #       uses: actions/upload-artifact@v4.6.2
   #       with:
   #         name: coverage-report
   #         path: NotchUtility/coverage.json
