--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
             
-      - name: Build for testing
+      - name: Build
         run: |
           xcodebuild clean build \
             -project NotchUtility.xcodeproj \
@@ -65,7 +65,7 @@ jobs:
           xcodebuild test \
             -project NotchUtility.xcodeproj \
             -scheme NotchUtility \
-            -destination 'platform=macOS,arch=arm64' \
+            -destination '${{ matrix.destination }}' \
             -only-testing:NotchUtilityTests \
             ONLY_ACTIVE_ARCH=NO \
             SWIFT_TREAT_WARNINGS_AS_ERRORS=YES \
