--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           
       - name: Run SwiftLint
         run: |
-          swiftlint lint --reporter github-actions-logging
+          swiftlint lint --strict --reporter github-actions-logging
 
   test:
     name: Build and Test
